--- a/src/app/components/drive-management/panel-form/panel-form.component.html
+++ b/src/app/components/drive-management/panel-form/panel-form.component.html
@@ -1,15 +1,17 @@
-
+<app-header></app-header>
+<app-side-bar></app-side-bar>
  
-<div class="container d-inline-flex p-2">
-  <div class="row mt-4 mb-2 text-center">
-    <div class="col">
-      <button type="button" (click)="openFormModal()" class="btn btn-danger" >
-        Add Panel
-      </button>
+<div class="container">
+  <div class="container d-inline-flex p-2">
+    <div class="row mt-4 mb-2 text-center">
+      <div class="col">
+        <button type="button" (click)="openFormModal()" class="btn btn-danger" >
+          Add Panel
+        </button>
+      </div>
     </div>
   </div>
 </div>
- 
 
 <div
   class="modal dark"
