--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,9 +1,9 @@
 <div class="container" *ngIf="user">
     <div class="row">
         <div class="auth-box justify-content-center align-items-center" >
-            <!-- <div class="container">
-                
-            </div> -->
+            <div class="container title">
+                <h3>Hiring Drive Management Tool</h3>
+            </div>
             
             <div class="header text-center">
                 <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" class="wg-logo">
