side bar submenu

--- a/src/app/components/common/side-bar/side-bar.component.html
+++ b/src/app/components/common/side-bar/side-bar.component.html
@@ -25,6 +25,10 @@
                 <i class="{{item2.icon}}"></i>
                 <span >
                     <a class="text-white" (click)="secondListClicked(item2.number)">{{item2.name}} </a>
+                    <ul *ngIf="checkMenuName(item2.number)" class="submenu">
+                        <li ><a routerLink="/hiring-drive">Add Drive</a></li>
+                        <li><a href="#">View Drive</a></li>
+                    </ul>
                 </span>
             </li>
         </ul>
