--- a/src/app/components/drive-management/view-drive-list/view-drive-list.component.html
+++ b/src/app/components/drive-management/view-drive-list/view-drive-list.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
 <app-side-bar></app-side-bar>
-<div class="container">
-    <div class="card-body">
-      <table class="table table-bordered table-striped table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+
+<div class="container display">
+    <div class="card-body d-inline-flex p2">
+      <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
           <thead>
           <tr>
               <th>Drive Title</th>
@@ -31,3 +32,4 @@
           </tbody>
       </table>
     </div>
+</div>
