--- a/src/app/components/drive-management/drive-management.component.html
+++ b/src/app/components/drive-management/drive-management.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 <app-side-bar></app-side-bar>
+<div class="container">
+    <div class="d-inline-flex p2">
+        <h1>Drive Management Content</h1>
+    </div>
+</div>
 <!-- <app-hiring-drive-form></app-hiring-drive-form> -->
 
 
