--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -6,11 +6,13 @@
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" placeholder="Enter Title" ngModel><br>
       
-        <div container>
+        <div class="d-inline-flex p-2">
           <label for="HiringAdmin">Hiring Admin</label> 
-          <li *ngFor="let panelist of panelistData" class="list">
+          <app-show-admin-form></app-show-admin-form>
+
+          <!-- <li *ngFor="let panelist of panelistData" class="list">
             <input type="Checkbox" name="admin"   ngModel>{{panelist.panelist_first_name}}
-          </li>
+          </li> -->
           
         </div>
         
