--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -23,7 +23,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Create Panelist</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Create Entity</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
