--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -32,24 +32,32 @@
                   <label for="entityname" >Entity Name:</label>
                   <input type="text" id="entityname" name="entity_name" placeholder="Enter Entity Name" ngModel><br>
   
-                  <label for="entity" >Choose Entity Type:</label>
-                  <select id="entityId" name="entity">
-                      <option value="select_option"></option>
-                      <option value="university">University</option>
-                      <option value="college">College</option>   
-                  </select>
-  
                   <div>
-                      <label for="coordinator" >Placement coordinator</label>
-                      <input type="text" id="coordinator" name="coordinator_name" placeholder="Enter Coordinator Name" ngModel><br>
+                    <label for="entity_type" >Choose Entity Type:</label>
+                    <select id="entity_type" name="entity_type" ngModel>
+                        <option >University</option>
+                        <option >College</option>   
+                    </select>
                   </div>
                   
-              
-                  <label for="email" ><b>Coordinator Email:</b></label>
-                  <input type="email" placeholder="Enter Coordinator Email"  name="coordinator_email" id="email" required ngModel><br>
+
+                  <label for="entityplace" >Entity Place:</label>
+                  <input type="text" id="entityplace" name="entity_place" placeholder="Enter Entity Place" ngModel><br>
   
-                  <label for="phone" >Coordinator Phone Number:</label>
-                  <input type="tel" id="fnum" placeholder="Enter Phone Number" name="coordinator_contact" ngModel><br>
+                  <div class="border border-dark">
+                    <div class="m-4">
+                      <label for="EntityContact">Contact Person</label> 
+                      <input type="text" id="coordinator" name="coordinator_name" placeholder="Enter Contact Person Name" ngModel>
+
+                      <label for="email" ><b>Contact Email:</b></label>
+                      <input type="email" placeholder="Enter Coordinator Email"  name="coordinator_email" id="email" required ngModel><br>
+    
+                      <label for="phone" >Contact Phone Number:</label>
+                      <input type="tel" id="fnum" placeholder="Enter Phone Number" name="coordinator_contact" ngModel><br>
+                    </div>
+                    
+                  </div>
+                  <span class="remove btn btn-success" (click)="addContact()">+</span>
                   
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
@@ -74,14 +82,18 @@
               <thead>
                 <tr>
                     <th>Entity Name</th>
-                    <th>Coordinator Name</th>
-                    <th>Coordinator Contact</th>
-                    <th>Coordinator Email</th>
+                    <th>Entity Type</th>
+                    <th>Entity Place</th>
+                    <th>Contact Name</th>
+                    <th>Contact Phone Number</th>
+                    <th>Contact Email</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let entity of EntityData">
                     <td>{{ entity.entity_name }}</td>
+                    <td>{{ entity.entity_type }}</td>
+                    <td>{{ entity.entity_place }}</td>
                     <td>{{ entity.coordinator_name }}</td>
                     <td>{{ entity.coordinator_contact }}</td>
                     <td>{{ entity.coordinator_email }}</td>
@@ -97,22 +109,4 @@
       
     <!-- </div> -->
 </div>
-
-  
-  <!-- <script>
-    $('#example').dataTable( {
-    paging: false,
-    searching: false
-    } );
-  </script> -->
-  <!-- <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-  <script>
-    $(document).ready(function () {
-        $('#example').DataTable();
-    });
-  </script>
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script> -->
-
-
-
   
